@startuml
interface ICommand {
    OnInput(point:Point) : bool
    OnCursorMove(point:Point) : bool
    Draw(graphics:Graphics) : void
}
abstract class Command {
    <<const>> penWidth : int = 10
    + <<virtual>> OnInput(point:Point) : bool
    + <<virtual>> OnCursorMove(point:Point) : bool
    + <<virtual>> Draw(graphics:Graphics) : void
}
class NullCommand {
}
class AddDotCommand {
    + <<override>> OnInput(point:Point) : bool
    + <<override>> OnCursorMove(point:Point) : bool
    + <<override>> Draw(graphics:Graphics) : void
}
class AddLineCommand {
    isFirst : bool = true
    + <<override>> OnInput(point:Point) : bool
    + <<override>> OnCursorMove(point:Point) : bool
    + <<override>> Draw(graphics:Graphics) : void
}
class AddCircleCommand {
    isFirst : bool = true
    + <<override>> OnInput(point:Point) : bool
    + <<override>> OnCursorMove(point:Point) : bool
    + <<override>> Draw(graphics:Graphics) : void
}
ICommand <|-- Command
Command o-> "pen" Pen
Command o-> "Model" Model
Command <|-- NullCommand
Command <|-- AddDotCommand
AddDotCommand --> "position" Point
Command <|-- AddLineCommand
AddLineCommand --> "start" Point
AddLineCommand --> "end" Point
Command <|-- AddCircleCommand
AddCircleCommand --> "center" Point
AddCircleCommand --> "lastPoint" Point
@enduml
